force-app/main/default/objects/Stripe_Subscription__c/Stripe_Subscription__c.object-meta.xml
<CustomObject>
    <label>Stripe Subscription</label>
    <nameField>
        <displayFormat>SUB-{000000}</displayFormat>
        <label>Subscription Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stripe Subscriptions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>