force-app/main/default/objects/Stripe_Subscription__c/fields/CustomerDefaultPayment__c.field-meta.xml
<CustomField>
    <fullName>CustomerDefaultPayment__c</fullName>
    <formula>Stripe_Customer__r.Default_Payment_Method__c</formula>
    <label>Customer Default Payment</label>
    <type>Text</type>
</CustomField>