force-app/main/default/objects/Stripe_Subscription__c/fields/Pricing_Plan__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The pricing plan associated with this subscription</description>
    <label>Pricing Plan</label>
    <referenceTo>Pricing_Plan__c</referenceTo>
    <relationshipLabel>Stripe Subscriptions</relationshipLabel>
    <relationshipName>Stripe_Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>