force-app/main/default/objects/Stripe_Subscription__c/fields/PricingPlans__c.field-meta.xml
<CustomField>
    <fullName>PricingPlans__c</fullName>
    <label>Pricing Plans</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic_Day</fullName>
            </value>
            <value>
                <fullName>Basic_Week</fullName>
            </value>
            <value>
                <fullName>Basic_Month</fullName>
            </value>
            <value>
                <fullName>Basic_Year</fullName>
            </value>
            <value>
                <fullName>Business_Day</fullName>
            </value>
            <value>
                <fullName>Business_Week</fullName>
            </value>
            <value>
                <fullName>Business_Month</fullName>
            </value>
            <value>
                <fullName>Business_Year</fullName>
            </value>
            <value>
                <fullName>Enterpise_Day</fullName>
            </value>
            <value>
                <fullName>Enterpise_Week</fullName>
            </value>
            <value>
                <fullName>Enterpise_Month</fullName>
            </value>
            <value>
                <fullName>Enterpise_Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>