force-app/main/default/objects/Stripe_Subscription__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <defaultValue>1</defaultValue>
    <description>The quantity of the subscribed item (e.g., number of seats, licenses, or units)</description>
    <inlineHelpText>Number of units for this subscription (defaults to 1)</inlineHelpText>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>