force-app/main/default/objects/Stripe_Subscription__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>active</fullName>
                <label>Active</label>
            </value>
            <value>
                <fullName>canceled</fullName>
                <label>Canceled</label>
            </value>
            <value>
                <fullName>incomplete</fullName>
                <label>Incomplete</label>
            </value>
            <value>
                <fullName>incomplete_expired</fullName>
                <label>Incomplete Expired</label>
            </value>
            <value>
                <fullName>past_due</fullName>
                <label>Past Due</label>
            </value>
            <value>
                <fullName>trialing</fullName>
                <label>Trialing</label>
            </value>
            <value>
                <fullName>unpaid</fullName>
                <label>Unpaid</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>