force-app/main/default/objects/Stripe_Subscription__c/fields/StripeCustomerId__c.field-meta.xml
<CustomField>
    <fullName>StripeCustomerId__c</fullName>
    <formula>Contact__r.Stripe_Customer_ID__c</formula>
    <label>Stripe Customer Id</label>
    <type>Text</type>
</CustomField>