force-app/main/default/objects/Stripe_Subscription__c/fields/StripeInvoiceId__c.field-meta.xml
<CustomField>
    <fullName>StripeInvoiceId__c</fullName>
    <label>Stripe Invoice Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>