force-app/main/default/objects/Stripe_Subscription__c/fields/Total_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Total_Invoiced__c</fullName>
    <description>Total amount invoiced for this subscription</description>
    <label>Total Invoiced</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>