force-app/main/default/objects/Stripe_Subscription__c/listViews/All_Stripe_Subscriptions.listView-meta.xml
<ListView>
    <fullName>All_Stripe_Subscriptions</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Currency__c</columns>
    <columns>Current_Period_Start__c</columns>
    <columns>Current_Period_End__c</columns>
    <columns>Product_Plan_Name__c</columns>
    <columns>Sync_Status__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Stripe Subscriptions</label>
</ListView>